--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,7 @@
 <html>
 <title>Cassidie Stevens Resume</title>
 <head>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 <!-- I built this myself!-->
