--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,12 @@
 </head>
 <body>
 <!-- I built this myself!-->
+<ul>
+<li><a href="about.html">About</a></li>
+<li><a href="work.html">Work</a></li>
+<li><a href="index.html">Home</a></li>
+<li><a href="resume.html">Resume</a></li>
+</ul>
 <h1>Cassidie Stevens</h1>
     <img src= "Cassidie-Stevens-TV.JPG" width=300 alt="Cassidie Stevens">
 <ul>
