--- a/about.html
+++ b/about.html
@@ -9,10 +9,11 @@ initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
+<h1>About</h1>
 <body>
 <!-- Content goes here -->
 <ul>
-<li><a href="about.html">About</a></li>
+<li><a href="#">About</a></li>
 <li><a href="work.html">Work</a></li>
 <li><a href="index.html">Home</a></li>
 <li><a href="resume.html">Resume</a></li>
