--- a/resume.html
+++ b/resume.html
@@ -9,13 +9,14 @@ initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
+<h1>Resume</h1>
 <body>
 <!-- I built this myself!-->
 <ul>
 <li><a href="about.html">About</a></li>
 <li><a href="work.html">Work</a></li>
 <li><a href="index.html">Home</a></li>
-<li><a href="resume.html">Resume</a></li>
+<li><a href="#">Resume</a></li>
 </ul>
 <h1>Cassidie Stevens</h1>
     <img src= "Cassidie-Stevens-TV.JPG" width=300 alt="Cassidie Stevens">
