--- a/work.html
+++ b/work.html
@@ -6,12 +6,13 @@
 </head>
 <body>
 <!-- Content goes here -->
+<h1>Work</h1>
 <div>
     <img src= "Cassidie-Stevens-TV.JPG" width=300 alt="Cassidie Stevens">
 </div>
 <ul>
 <li><a href="about.html">About</a></li>
-<li><a href="work.html">Work</a></li>
+<li><a href="#">Work</a></li>
 <li><a href="index.html">Home</a></li>
 <li><a href="resume.html">Resume</a></li>
 </ul>
