--- a/design.html
+++ b/design.html
@@ -37,12 +37,17 @@ initial-scale=1.0">
 <h5>How vexingly quick daft zebras jump!</h5>
 <h6>he five boxing wizards jump quickly.</h6>
 
+<h3>Wireframes</h3>
+<img src="About.jpg" alt="About Page" width="300">
+<img src="Home.jpg" alt="Home Page" width="300">
+<img src="Resume.jpg" alt="Resume Page" width="300">
+<img src="Work.jpg" alt="Work Page" width="300">
 <div id="color-palette">
-    <div class="color-1">D8DBE2</div>
-    <div class="color-2">A9BCD0</div>
-    <div class="color-3">58A4B0</div>
-    <div class="color-4">373F51</div>
-    <div class="color-5">1B1B1E</div>
+    <div class="color-1">#D8DBE2</div>
+    <div class="color-2">#A9BCD0</div>
+    <div class="color-3">#58A4B0</div>
+    <div class="color-4">#373F51</div>
+    <div class="color-5">#1B1B1E</div>
 </div>
 </body>
 </html>
