--- a/about.html
+++ b/about.html
@@ -12,12 +12,14 @@ initial-scale=1.0">
 <h2>About</h2>
 <body>
 <!-- Content goes here -->
+<div class="menu">
 <ul>
 <li><a href="index.html">Home</a></li>
 <li><a href="#">About</a></li>
 <li><a href="work.html">Work</a></li>
 <li><a href="resume.html">Resume</a></li>
 </ul>
+</div>
 <div>
     <img src= "Cassidie-Stevens-TV.JPG" width=300 alt="Cassidie Stevens">
     <p>
