--- a/resume.html
+++ b/resume.html
@@ -9,15 +9,18 @@ initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
+
 <h2>Resume</h2>
 <body>
 <!-- I built this myself!-->
+<div class="menu">
 <ul>
-    <li><a href="index.html">Home</a></li>
+<li><a href="index.html">Home</a></li>
 <li><a href="about.html">About</a></li>
 <li><a href="work.html">Work</a></li>
 <li><a href="#">Resume</a></li>
 </ul>
+</div>
 <h3>Cassidie Stevens</h3>
     <img src= "Cassidie-Stevens-TV.JPG" width=300 alt="Cassidie Stevens">
 <ul>
