--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@ initial-scale=1.0">
 <body>
 <!-- Content goes here -->
 <img src= "Cassidie-Stevens-TV.JPG" width=300 alt="Cassidie Stevens">
+<div class="menu">
 <ul>
     <li><a href="#">Home</a></li>
 <li><a href="about.html">About</a></li>
 <li><a href="work.html">Work</a></li>
 <li><a href="resume.html">Resume</a></li>
 </ul>
+</div>
 </body>
 </html>
