--- a/work.html
+++ b/work.html
@@ -10,11 +10,13 @@
 <div>
     <img src= "Cassidie-Stevens-TV.JPG" width=300 alt="Cassidie Stevens">
 </div>
+<div class="menu">
 <ul>
 <li><a href="index.html">Home</a></li>
 <li><a href="about.html">About</a></li>
 <li><a href="#">Work</a></li>
 <li><a href="resume.html">Resume</a></li>
 </ul>
+</div>
 </body>
 </html>
