--- a/work.html
+++ b/work.html
@@ -3,6 +3,10 @@
 <head>
     <title>Cassidie Stevens Work</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <section class="header">
+        <h1>Cassidie Stevens</h1>
+        <p>Broadcast Journalist</p>
+    </section>
 </head>
 <body>
 <!-- Content goes here -->
