--- a/resume.html
+++ b/resume.html
@@ -8,6 +8,10 @@ initial-scale=1.0">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <section class="header">
+        <h1>Cassidie Stevens</h1>
+        <p>Broadcast Journalist</p>
+    </section>
 </head>
 
 <h2>Resume</h2>
