--- a/work.html
+++ b/work.html
@@ -3,16 +3,15 @@
 <head>
     <title>Cassidie Stevens Work</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <section class="header">
+    <div class="header">
         <h1>Cassidie Stevens</h1>
         <p>Broadcast Journalist</p>
-    </section>
+    </div>
 </head>
 <body>
 <!-- Content goes here -->
 <h2>Work</h2>
 <div>
-    <img src= "Cassidie-Stevens-TV.JPG" width=300 alt="Cassidie Stevens">
 </div>
 <div class="menu">
 <ul>
