--- a/about.html
+++ b/about.html
@@ -36,6 +36,9 @@ initial-scale=1.0">
             <li> Script writing</li>
             <li> Editing and post production</li>
             <li> Visual Effects</li>
+            <li> HTML/CSS</li>
+            <li> R Studio/ Data Cleaning</li>
+            <li> C++ </li>
             </ul>
     </div>
 
