--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@ initial-scale=1.0">
 </ul>
 </div>
 <img src= "Cassidie-Stevens-TV.JPG" width=300 alt="Cassidie Stevens">
-<img src ="Cassidie-Headhhot.JPG" width=300 alt="Cassidie Stevens">
+<img src ="Cassidie-Headshot.JPG" width=300 alt="Cassidie Stevens">
 </body>
 </html>
