--- a/about.html
+++ b/about.html
@@ -18,16 +18,18 @@ initial-scale=1.0">
 <!-- Content goes here -->
 <div class="menu">
 <ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="#">About</a></li>
-<li><a href="work.html">Work</a></li>
-<li><a href="resume.html">Resume</a></li>
+<li><a class="link" href="index.html">Home</a></li>
+<li><a class="link" href="#">About</a></li>
+<li><a class="link" href="work.html">Work</a></li>
+<li><a class="link" href="resume.html">Resume</a></li>
 </ul>
 </div>
 <div>
-    <img src= "Cassidie-Stevens-TV.JPG" width=300 alt="Cassidie Stevens">
+    <img src ="cassidie-grad.JPG" width=300 alt="Cassidie Stevens">
     <p>
-        I am a Broadcast Journalism major at the University of Maryland. I've been in the news scene since highschool first running the announcement there and working for professionals ever since. </p>
+        I am a Broadcast Journalism major at the University of Maryland. I've been in the news scene since highschool first by being a huge part of the announcements team there and working for professionals ever since. I have been in the industry since 2016 professonally, and I have found that video work is my passion. </p>
+    <p>
+        I grew up in New Jersey where I first started working for WJLP under award-winning journalists Larry Mendte and Kim Kravitz. Under his guidance I was able to learn proper on-air speaking techniques as well as script writing to make me a better journalist.</p>
 </div>
 <div>
         <h3>  Skills </h3>
