--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@ initial-scale=1.0">
 <!-- Content goes here -->
 <div class="menu">
 <ul>
-    <li><a href="#">Home</a></li>
-<li><a href="about.html">About</a></li>
-<li><a href="work.html">Work</a></li>
-<li><a href="resume.html">Resume</a></li>
+    <li><a class="link" href="#">Home</a></li>
+<li><a class="link" href="about.html">About</a></li>
+<li><a class="link" href="work.html">Work</a></li>
+<li><a class="link" href="resume.html">Resume</a></li>
 </ul>
 </div>
-<img src= "Cassidie-Stevens-TV.JPG" width=300 alt="Cassidie Stevens">
+<img src= "Cassidie-Stevens-TV.JPG" width=500 alt="Cassidie Stevens">
 <img src ="Cassidie-Headshot.JPG" width=300 alt="Cassidie Stevens">
 </body>
 </html>
