--- a/resume.html
+++ b/resume.html
@@ -19,23 +19,23 @@ initial-scale=1.0">
 <!-- I built this myself!-->
 <div class="menu">
 <ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="about.html">About</a></li>
-<li><a href="work.html">Work</a></li>
-<li><a href="#">Resume</a></li>
+<li><a class="link" href="index.html">Home</a></li>
+<li><a class="link" href="about.html">About</a></li>
+<li><a class="link" href="work.html">Work</a></li>
+<li><a class="link" href="#">Resume</a></li>
 </ul>
 </div>
 <h3>Cassidie Stevens</h3>
 <ul>
     <li>Cstv26@umd.edu</li>
     <li>
-        <a href="www.linkedin.com/in/cassidie-stevens-50403a1b5" target="_blank"> LinkedIn</a>
+        <a class="link" href="www.linkedin.com/in/cassidie-stevens-50403a1b5" target="_blank"> LinkedIn</a>
     </li>
     <li>
-        <a href="https://twitter.com/CassidieStevens" target="_blank"> Twitter</a>
+        <a class="link" href="https://twitter.com/CassidieStevens" target="_blank"> Twitter</a>
     </li>
     <li>
-        <a href="https://github.com/Cstv26" target="_blank"> Github</a>
+        <a class="link" href="https://github.com/Cstv26" target="_blank"> Github</a>
     </li>
 <p>
     <strong>Storyteller</strong>
