--- a/work.html
+++ b/work.html
@@ -15,11 +15,17 @@
 </div>
 <div class="menu">
 <ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="about.html">About</a></li>
-<li><a href="#">Work</a></li>
-<li><a href="resume.html">Resume</a></li>
+<li><a class="link" href="index.html">Home</a></li>
+<li><a class="link" href="about.html">About</a></li>
+<li><a class="link" href="#">Work</a></li>
+<li><a class="link" href="resume.html">Resume</a></li>
 </ul>
+</div>
+<div class="reel">
+<video width="320" height="240" controls>
+    <source src="demo-reel.mp4" type="video/mp4">
+        Your browser does not support the video.
+</video>
 </div>
 </body>
 </html>
