--- a/about.html
+++ b/about.html
@@ -26,9 +26,9 @@ initial-scale=1.0">
 </div>
 <div>
     <img src ="cassidie-grad.JPG" width=300 alt="Cassidie Stevens">
-    <p>
+    <p class="about">
         I am a Broadcast Journalism major at the University of Maryland. I've been in the news scene since highschool first by being a huge part of the announcements team there and working for professionals ever since. I have been in the industry since 2016 professonally, and I have found that video work is my passion. </p>
-    <p>
+    <p class="about">
         I grew up in New Jersey where I first started working for WJLP under award-winning journalists Larry Mendte and Kim Kravitz. Under his guidance I was able to learn proper on-air speaking techniques as well as script writing to make me a better journalist.</p>
 </div>
 <div>
