--- a/about.html
+++ b/about.html
@@ -33,15 +33,13 @@ initial-scale=1.0">
 </div>
 <div>
         <h3>  Skills </h3>
-        <ul>
-            <li> On air reporting</li>
-            <li> Script writing</li>
-            <li> Editing and post production</li>
-            <li> Visual Effects</li>
-            <li> HTML/CSS</li>
-            <li> R Studio/ Data Cleaning</li>
-            <li> C++ </li>
-            </ul>
+            <p> On air reporting</p>
+            <p> Script writing</p>
+            <p> Editing and post production</p>
+            <p> Visual Effects</p>
+            <p> HTML/CSS</p>
+            <p> R Studio/ Data Cleaning</p>
+            <p> C++ </p>
     </div>
 
 </body>
