--- a/resume.html
+++ b/resume.html
@@ -57,17 +57,29 @@ initial-scale=1.0">
 <p>
     I wrote multiple pieced for the University of Maryland's newspaper, The Diamondback. I made sure to cover hard-hitting issues that were vital for our campus.
 </p>
+<h3>Content Creator</h3>
+<h4>The Hare</h4>
+<h5>2021-Present</h5>
+<p>
+    I wrote articles, produced media such as images, video, and podcast audio for the satricial newspaper on campus.
+</p>
 
 <h2>Education</h2>
-<ul>
-    <li>Bachelor's degree in Broadcast Journalism at The University of Maryland, College Park 2022. </li>
-</ul>
+<p>
+    Bachelor's degree in Broadcast Journalism at The University of Maryland, College Park 2022. </li>
+</p>
 
 <h2>Skills</h2>
-<ul>
-    <li>Premiere Pro</li>
-    <li>Final Cut Pro</li>
-    <li>Microsoft Office</li>
+    <p> Premiere Pro</p>
+    <p> Final Cut Pro</p>
+    <p> Microsoft Office</p>
+    <p> On air reporting</p>
+    <p> Script writing</p>
+    <p> Editing and post production</p>
+    <p> Visual Effects</p>
+    <p> HTML/CSS</p>
+    <p> R Studio/ Data Cleaning</p>
+    <p> C++ </p>
 
 </body>
 </html>
