--- a/work.html
+++ b/work.html
@@ -2,6 +2,11 @@
 <html>
 <head>
     <title>Cassidie Stevens Work</title>
+    <meta name="viewport" content="width=device-width,
+initial-scale=1.0">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <div class="header">
         <h1>Cassidie Stevens</h1>
@@ -26,6 +31,7 @@
     <source src="demo-reel.mp4" type="video/mp4">
         Your browser does not support the video.
 </video>
+<p>News Reel: This contains some of my newsbreaks from my most recent time working at WJLP for the Summer of 2021. This includes newsbreaks from recording the intros and outros in the studio and the story audios remotley, as well as recording everything in the studio. </p>
 </div>
 </body>
 </html>
