--- a/resume.html
+++ b/resume.html
@@ -26,17 +26,17 @@ initial-scale=1.0">
 </ul>
 </div>
 <h3>Cassidie Stevens</h3>
-<ul>
-    <li>Cstv26@umd.edu</li>
-    <li>
+    <p>
+        <a class="link" href= "mailto:Cstv26@umd.edu"> Email </p>
+    <p>
         <a class="link" href="www.linkedin.com/in/cassidie-stevens-50403a1b5" target="_blank"> LinkedIn</a>
-    </li>
-    <li>
+    </p>
+    <p>
         <a class="link" href="https://twitter.com/CassidieStevens" target="_blank"> Twitter</a>
-    </li>
-    <li>
+    </p>
+    <p>
         <a class="link" href="https://github.com/Cstv26" target="_blank"> Github</a>
-    </li>
+    </p>
 <p>
     <strong>Storyteller</strong>
 </p>
