--- a/work.html
+++ b/work.html
@@ -28,7 +28,8 @@ initial-scale=1.0">
 </div>
 <div class="reel">
 <video width="320" height="240" controls>
-    <source src="demo-reel.mp4" type="video/mp4">
+    <source src="https://player.vimeo.com/video/635351709?h=62e4721393&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" >
+    <source src="https://player.vimeo.com/api/player.js"></script>"
         Your browser does not support the video.
 </video>
 <p>News Reel: This contains some of my newsbreaks from my most recent time working at WJLP for the Summer of 2021. This includes newsbreaks from recording the intros and outros in the studio and the story audios remotley, as well as recording everything in the studio. </p>
