--- a/resume.html
+++ b/resume.html
@@ -55,7 +55,7 @@ initial-scale=1.0">
 <h4>The Diamondback</h4>
 <h5>2020-Present</h5>
 <p>
-    I wrote multiple pieced for the University of Maryland's newspaper, The Diamondback. I made sure to cover hard-hitting issues that were vital for our campus.
+    I wrote multiple pieces for the University of Maryland's newspaper, The Diamondback. I made sure to cover hard-hitting issues that were vital for our campus.
 </p>
 <h3>Content Creator</h3>
 <h4>The Hare</h4>
