--- a/work.html
+++ b/work.html
@@ -27,10 +27,8 @@ initial-scale=1.0">
 </ul>
 </div>
 <div class="reel">
-<video controls>
-    <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/635351709?h=62e4721393&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="demo-reel"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
-        Your browser does not support the video.
-</video>
+<div>    <iframe src="https://player.vimeo.com/video/635351709?h=62e4721393" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+<p><a href="https://vimeo.com/635351709">demo-reel</a> from <a href="https://vimeo.com/user122444580">Cassidie Stevens</a> on <a href="https://vimeo.com">Vimeo</a>.</p> </div>
 <p>News Reel: This contains some of my newsbreaks from my most recent time working at WJLP for the Summer of 2021. This includes newsbreaks from recording the intros and outros in the studio and the story audios remotley, as well as recording everything in the studio. </p>
 </div>
 </body>
