--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@ initial-scale=1.0">
 </ul>
 </div>
 <div>
-    <img src = "image/cassidie-grad.jpg" width=300 alt="Cassidie Stevens">
+    <img class="headshot" src = "image/cassidie-grad.jpg" width=300 alt="Cassidie Stevens">
     <p class="about">
         I am a Broadcast Journalism major at the University of Maryland. I've been in the news scene since highschool first by being a huge part of the announcements team there and working for professionals ever since. I have been in the industry since 2016 professonally, and I have found that video work is my passion. </p>
     <p class="about">
