--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ initial-scale=1.0">
 <li><a class="link" href="resume.html">Resume</a></li>
 </ul>
 </div>
-<img src= "image/cassidie-stevens-tv.jpg" width=500 alt="Cassidie Stevens">
-<img src ="image/cassidie-headshot.jpg" width=300 alt="Cassidie Stevens">
+<img class="tvimage" src= "image/cassidie-stevens-tv.jpg" alt="Cassidie Stevens">
+<img class="headshot" src ="image/cassidie-headshot.jpg"  alt="Cassidie Stevens">
 </body>
 </html>
