--- a/work.html
+++ b/work.html
@@ -31,5 +31,9 @@ initial-scale=1.0">
 <p><a href="https://vimeo.com/635351709">demo-reel</a> from <a href="https://vimeo.com/user122444580">Cassidie Stevens</a> on <a href="https://vimeo.com">Vimeo</a>.</p> </div>
 <p>News Reel: This contains some of my newsbreaks from my most recent time working at WJLP for the Summer of 2021. This includes newsbreaks from recording the intros and outros in the studio and the story audios remotley, as well as recording everything in the studio. </p>
 </div>
+<div class="reel">
+    <div> <iframe src="https://player.vimeo.com/video/637183222?h=a53f73da26&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0"  height="360" width="640"title="clinton"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+<p> This is an example of a "Jersey Jaunt" where we go and highlight different towns or communities in New Jersey! We cover anything big like Lucy the Elephant, to smaller hidden gems like you see here, the small town of Clinton!</p>
+</div>
 </body>
 </html>
