--- a/work.html
+++ b/work.html
@@ -35,5 +35,6 @@ initial-scale=1.0">
     <div> <iframe src="https://player.vimeo.com/video/637183222?h=a53f73da26&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0"  height="360" width="640"title="clinton"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 <p> This is an example of a "Jersey Jaunt" where we go and highlight different towns or communities in New Jersey! We cover anything big like Lucy the Elephant, to smaller hidden gems like you see here, the small town of Clinton!</p>
 </div>
+<footer> 2021, Cassidie Stevens.</footer>
 </body>
 </html>
