--- a/about.html
+++ b/about.html
@@ -41,6 +41,6 @@ initial-scale=1.0">
             <p> R Studio/ Data Cleaning</p>
             <p> C++ </p>
     </div>
-
+<footer> 2021, Cassidie Stevens.</footer>
 </body>
 </html>
