--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@ initial-scale=1.0">
     <div class="header">
         <h1>Cassidie Stevens</h1>
         <p>Broadcast Journalist</p>
-    </div>
 </head>
 <h2>Home</h2>
 <body>
@@ -26,5 +25,6 @@ initial-scale=1.0">
 </div>
 <img class="tvimage" src= "image/cassidie-stevens-tv.jpg" alt="Cassidie Stevens">
 <img class="headshot" src ="image/cassidie-headshot.jpg"  alt="Cassidie Stevens">
+<footer> 2021, Cassidie Stevens.</footer>
 </body>
 </html>
