--- a/resume.html
+++ b/resume.html
@@ -80,6 +80,6 @@ initial-scale=1.0">
     <p> HTML/CSS</p>
     <p> R Studio/ Data Cleaning</p>
     <p> C++ </p>
-
+<footer> 2021, Cassidie Stevens.</footer>
 </body>
 </html>
